# GOESB

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-binaries.yml  release.yml
api/: README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1df4e876b43e_create_results_table.py  28b262caec74_add_runner_tokens_table.py
api/src/oesb_api/: __init__.py  assets.py  db.py  ingest.py  main.py  models.py  schemas.py  tokens.py
api/src/oesb_api/routes/: benchmarks.py  hardware.py  leaderboards.py  packs.py  profiles.py  tokens.py
api/tests/: conftest.py  test_benchmarks.py  test_health.py  test_routes.py  test_tokens.py
docs/: 00-vision.md  01-requirements.md  02-architecture.md  03-roadmap.md  04-glossary.md  README.md  governance.md
docs/adr/: 0001-record-architecture-decisions.md  0002-tech-stack.md  0003-open-source-strategy.md  0004-runner-security-model.md  0005-cloud-api-benchmarks.md  0005-signing-token-distribution-and-trust-limits.md  0006-cloud-api-benchmarks.md  0006-split-platform-repo.md  0007-split-platform-repo.md  0008-explicit-compute-backend.md
docs/specs/: environment-capture.md  metrics.md  runner-overhead.md
packs/: README.md
packs/example-common-voice-nl-batch/: pack.yaml
packs/example-fleurs-nl-batch/: manifest.jsonl  pack.yaml
packs/example-librispeech-en-batch/: pack.yaml
packs/example-librispeech-en-streaming/: manifest.jsonl  pack.yaml
packs/example-librispeech-en-vosk-batch/: pack.yaml
packs/example-librispeech-en-whispercpp-batch/: pack.yaml
profiles/: README.md
profiles/vosk-small-en-batch/: profile.yaml
profiles/whisper-medium-en-batch/: profile.yaml
profiles/whisper-medium-en-streaming/: profile.yaml
profiles/whisper-medium-nl-batch/: profile.yaml
profiles/whispercpp-base-en-batch/: profile.yaml
runner/: README.md  pyproject.toml
runner/src/oesb_runner/: __init__.py  audio.py  audio_sources.py  cli.py  energy.py  environment.py  hashing.py  pack.py  remote.py  schema_validation.py  signing.py  stats.py  streaming.py
runner/src/oesb_runner/adapters/: __init__.py  faster_whisper.py  vosk.py  whisper_cpp.py
runner/src/oesb_runner/metrics/: _align.py  cer.py  cpu_ram.py  end_of_speech_latency.py  energy.py  first_final_latency.py  first_partial_latency.py  partial_stability.py  rtf.py  streaming_responsiveness.py  temperature.py  update_frequency.py  wer.py
runner/src/oesb_runner/normalization/: __init__.py  oesb_en_v1.py  oesb_nl_v1.py
runner/src/oesb_runner/schemas/: benchmark-pack.schema.json
runner/tests/: test_adapter_faster_whisper.py  test_adapter_vosk.py  test_adapter_whisper_cpp.py  test_adapters.py  test_audio_sources.py  test_cli.py  test_energy.py  test_environment.py  test_faster_whisper_model_id.py  test_hashing.py  test_metrics.py  test_normalization.py  test_normalization_en.py  test_overhead.py  test_pack.py  test_run_end_to_end.py  test_run_streaming_end_to_end.py  test_run_vosk_end_to_end.py  test_run_whispercpp_end_to_end.py  test_schema_validation.py  test_signing.py  test_stats.py  test_streaming_metrics.py  test_whisper_cpp_model_id.py
schemas/: benchmark-pack.schema.json  benchmark-profile.schema.json  benchmark-result.schema.json
schemas/examples/: benchmark-result.example.json
scripts/: fetch_fleurs_subset.py  fetch_librispeech_subset.py  generate_frozen_adapter_hashes.py  validate_assets.py
web/: README.md  next.config.mjs  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx
