[project]
name = "oesb-api"
version = "0.0.1"
description = "OESB REST API (leaderboards, profiles, packs, hardware, benchmarks)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  # oesb-runner (trust primitives: schema_validation, signing, hashing) is
  # NOT listed here — a plain PEP 508 relative-path dependency isn't
  # portable across install locations. Install it as a sibling editable
  # package instead: `pip install -e ./runner -e ./api[dev]` (see
  # .github/workflows/ci.yml and README.md).
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4", "mypy>=1.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oesb_api"]
