[project]
name = "oesb-runner"
version = "0.0.1"
description = "Official Open Edge Speech Benchmark (OESB) runner"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "pyyaml>=6.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
oesb = "oesb_runner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oesb_runner"]
