[project]
name = "goesb-runner"
version = "0.0.1"
description = "Official Open Edge Speech Benchmark (GOESB) runner"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "pyyaml>=6.0",
  "psutil>=5.9",
  "cryptography>=42.0",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]
faster-whisper = ["faster-whisper>=1.0.0"]
vosk = ["vosk>=0.3.44", "soundfile>=0.12"]
whisper-cpp = ["pywhispercpp>=1.5.0", "soundfile>=0.12"]

[project.scripts]
goesb = "oesb_runner.cli:app"

[tool.pytest.ini_options]
markers = ["slow: exercises a real model/network (e.g. faster-whisper inference)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oesb_runner"]
