[project]
name = "goesb-runner"
version = "0.0.1"
description = "Official Open Edge Speech Benchmark (GOESB) runner"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "pyyaml>=6.0",
  "psutil>=5.9",
  "cryptography>=42.0",
  "jsonschema>=4.21",
  "packaging>=23.0",
]

[project.optional-dependencies]
# ruff pinned to a minor version, not left floating: an unpinned >=0.4 let
# CI silently pick up a newer ruff whose default rule set changed, breaking
# a previously-green build with no repo change at all.
dev = ["pytest>=8.0", "ruff~=0.16.0", "mypy>=1.9"]
faster-whisper = ["faster-whisper>=1.0.0"]
vosk = ["vosk>=0.3.44", "soundfile>=0.12"]
whisper-cpp = ["pywhispercpp>=1.5.0", "soundfile>=0.12"]

[project.scripts]
goesb = "oesb_runner.cli:app"

[tool.pytest.ini_options]
markers = ["slow: exercises a real model/network (e.g. faster-whisper inference)"]

[tool.ruff.lint.per-file-ignores]
# Adapters/rulesets import after a comment explaining the registration side effect;
# tests importorskip an optional dep before importing the module that needs it.
"src/oesb_runner/adapters/__init__.py" = ["E402"]
"src/oesb_runner/normalization/__init__.py" = ["E402"]
"tests/test_adapter_faster_whisper.py" = ["E402"]
"tests/test_adapter_vosk.py" = ["E402"]
"tests/test_adapter_whisper_cpp.py" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oesb_runner"]
